--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Metro_buscaminas
+application.vendor=cesar
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,11 +33,18 @@ dist.jar=${dist.dir}/Metro_buscaminas.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Metro_buscaminas
+endorsed.classpath=
 excludes=
+file.reference.gs-algo-2.0.jar=C:\\Users\\cesar\\Downloads\\gs-algo-2.0.jar
+file.reference.gs-core-2.0.jar=C:\\Users\\cesar\\Downloads\\gs-core-2.0.jar
+file.reference.gs-ui-swing-2.0.jar=C:\\Users\\cesar\\Downloads\\gs-ui-swing-2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.gs-algo-2.0.jar}:\
+    ${file.reference.gs-core-2.0.jar}:\
+    ${file.reference.gs-ui-swing-2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
