--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\ile1\\AppData\\Roaming\\NetBeans\\18\\build.properties
+user.properties.file=C:\\Users\\francisco\\AppData\\Roaming\\NetBeans\\24\\build.properties
